--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -9,11 +9,64 @@
     <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename = 'dashboard.css') }}" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="root">
+      <div class="header">
+        <div class="header-container">
+          <div class="absalutation">
+            <p>Guten Tag!</p>
+          </div>
+          <div class="date">
+          </div>
+          <div class="time">
+          </div>
+        </div>
+      </div>
+      <div class="weather">
+        <div class="weather-container">
+        </div>
+      </div>
+      <div class="forecast">
+        <div class="forecast-container">
+        </div>
+      </div>
+      <div class="bin">
+        <div class="bin-container">
+          <details>
+            <summary>Mülltonne diese Woche:</summary>
+            <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+          </details>
+        </div>
+      </div>
+      <div class="temp">
+        <div class="temp-container">
+          <details>
+            <summary>Temperatur:</summary>
+            <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+          </details>
+        </div>
+      </div>
+      <div class="light">
+        <div class="light-container">
+          <details>
+            <summary>Steckdosen aktiv:</summary>
+            <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+          </details>
+        </div>
+      </div>
+      <div class="spotify">
+        <div class="spotify-container">
+          <details>
+            <summary>Aktueller Song:</summary>
+            <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+          </details>
+        </div>
+      </div>
     </div>
-    <script src="{{ url_for('static', filename = 'preload.js') }}"></script>
+    <script src="{{ url_for('static', filename = 'clock.js') }}"></script>
   </body>
   </html>
