--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -17,12 +17,15 @@
     <div class="root">
       <div class="header">
         <div class="header-container">
-          <div class="absalutation">
-            <p>Guten Tag!</p>
+          <div class="clock">
+            <div id="date"></div>
+            <div id="time"></div>
           </div>
-          <div class="date">
-          </div>
-          <div class="time">
+          <div class="bin">
+            <div id="bin-logo">
+              <img src="https://img.icons8.com/android/144/000000/trash.png"/>
+            </div>
+            <div id="bin-date">20.12</div>
           </div>
         </div>
       </div>
@@ -34,10 +37,10 @@
         <div class="forecast-container">
         </div>
       </div>
-      <div class="bin">
-        <div class="bin-container">
+      <div class="foo">
+        <div class="foo-container">
           <details>
-            <summary>Mülltonne diese Woche:</summary>
+            <summary></summary>
             <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
           </details>
         </div>
@@ -45,7 +48,7 @@
       <div class="temp">
         <div class="temp-container">
           <details>
-            <summary>Temperatur:</summary>
+            <summary></summary>
             <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
           </details>
         </div>
@@ -53,7 +56,7 @@
       <div class="light">
         <div class="light-container">
           <details>
-            <summary>Steckdosen aktiv:</summary>
+            <summary></summary>
             <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
           </details>
         </div>
@@ -61,7 +64,7 @@
       <div class="spotify">
         <div class="spotify-container">
           <details>
-            <summary>Aktueller Song:</summary>
+            <summary></summary>
             <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
           </details>
         </div>
