--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -15,17 +15,17 @@
   </head>
   <body>
     <div class="root">
+      <div class="sunset-sunrise">
+        <div class="sunset-sunrise-container">
+          <div id="sunrise"></div>
+          <div id="sunset"></div>
+        </div>
+      </div>
       <div class="header">
         <div class="header-container">
           <div class="clock">
             <div id="date"></div>
             <div id="time"></div>
-          </div>
-          <div class="bin">
-            <div id="bin-logo">
-              <img src="https://img.icons8.com/android/144/000000/trash.png"/>
-            </div>
-            <div id="bin-date">20.12</div>
           </div>
         </div>
       </div>
@@ -39,17 +39,34 @@
       </div>
       <div class="foo">
         <div class="foo-container">
-          <details>
-            <summary></summary>
-            <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
-          </details>
+          <div class="bin-1">
+            <div id="bin-logo-1">
+              <i class="far fa-trash-alt fa-3x"></i>
+            </div>
+            <div id="bin-date-1">
+              20.12
+            </div>
+          </div>
+          <div class="bin-2">
+            <div id="bin-logo-2">
+              <i class="far fa-trash-alt fa-3x"></i>
+            </div>
+            <div id="bin-date-2">
+              20.12
+            </div>
+          </div>
+          <!--<details>
+            <summary>
+          </summary>
+            <p></p>
+          </details>-->
         </div>
       </div>
       <div class="temp">
         <div class="temp-container">
           <details>
             <summary></summary>
-            <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+            <p></p>
           </details>
         </div>
       </div>
@@ -71,5 +88,6 @@
       </div>
     </div>
     <script src="{{ url_for('static', filename = 'clock.js') }}"></script>
+    <script src="{{ url_for('static', filename = 'sunrise.js') }}"></script>
   </body>
   </html>
